--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,18 +6,28 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
-    <android.support.v7.widget.SearchView
-        android:layout_width="match_parent"
+    <LinearLayout
         android:layout_margin="10dp"
-        android:id="@+id/search_view_word"
-        app:defaultQueryHint="@string/serach_word"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </android.support.v7.widget.SearchView>
+        <Button
+            android:text="Viet-LAO"
+            style="@style/Widget.AppCompat.Button.Borderless.Colored"
+            android:layout_width="wrap_content"
+            android:id="@+id/btn_swap"
+            android:layout_height="wrap_content" />
+        <android.support.v7.widget.SearchView
+            android:layout_width="match_parent"
+            android:id="@+id/search_view_word"
+            app:defaultQueryHint="@string/serach_word"
+            android:layout_height="wrap_content">
+        </android.support.v7.widget.SearchView>
+    </LinearLayout>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_margin="10dp"
         android:id="@+id/recycle_view_words"
         android:layout_height="match_parent">
-
     </android.support.v7.widget.RecyclerView>
 </LinearLayout>
