--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -20,4 +20,11 @@
         android:id="@+id/word_detail"
         android:textSize="24dp"
         android:text="Some thine!"/>
+    <ImageView
+        android:id="@+id/img_favorite"
+        android:layout_gravity="right"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/ic_star_border_black_24dp"
+        />
 </LinearLayout>
