--- a/app/src/main/res/layout/activity_favorite.xml
+++ b/app/src/main/res/layout/activity_favorite.xml
@@ -5,18 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".FavoriteActivity">
     <LinearLayout
         android:layout_margin="10dp"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <Button
-            android:text="Viet-LAO"
-            style="@style/Widget.AppCompat.Button.Borderless.Colored"
-            android:layout_width="wrap_content"
-            android:id="@+id/btn_swap"
-            android:layout_height="wrap_content" />
         <android.support.v7.widget.SearchView
             android:layout_weight="1"
             android:layout_width="match_parent"
@@ -24,12 +18,6 @@
             app:defaultQueryHint="@string/serach_word"
             android:layout_height="wrap_content">
         </android.support.v7.widget.SearchView>
-        <ImageView
-            android:id="@+id/list_favorite"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center_vertical|center_horizontal"
-            android:src="@drawable/ic_star_yellow_800_24dp"/>
     </LinearLayout>
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
